# DoorSlam-main

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  PROGRESS.md  README.md  TECHNICAL_AUDIT.md  UI_COMPONENTS.md  eslint.config.js  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
.claude/: launch.json
.github/: pull_request_template.md
ai-tutor-api/: .env.example  pyproject.toml  requirements.txt
ai-tutor-api/scripts/: backfill_enrichment.py  backfill_topics.py  extract_curriculum.py  google_oauth.py  ingest.py  reembed.py
ai-tutor-api/src/: auth.py  config.py  main.py
ai-tutor-api/src/api/: chat.py  conversations.py  ingestion.py
ai-tutor-api/src/models/: chat.py  ingestion.py
ai-tutor-api/src/services/: batch_ingestion.py  chunker.py  curriculum_extractor.py  curriculum_validator.py  document_enricher.py  drive_walker.py  embedder.py  filename_parser.py  ingestion.py  memory.py  metadata_extractor.py  metadata_resolver.py  parser.py  path_parser.py  retrieval.py  sync.py  taxonomy.py
ai-tutor-api/tests/: conftest.py  test_auth.py  test_chat_stream.py  test_chunker.py  test_conversations.py  test_curriculum_extractor.py  test_curriculum_validator.py  test_document_enricher.py  test_filename_parser.py  test_health.py  test_ingestion_api.py  test_memory.py  test_metadata_extractor.py  test_models.py  test_parser.py  test_path_parser.py  test_retrieval.py  test_sync.py  test_taxonomy.py
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
(+563 files in other folders)
