[project]
name = "doorslam-ai-tutor"
version = "0.1.0"
description = "RAG-powered AI Tutor API for Doorslam GCSE revision platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pyjwt>=2.9.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "sse-starlette>=2.2.0",
    "openai>=1.60.0",
    "supabase>=2.11.0",
    "docling>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
